# medialibrary-to-audiobookshelf

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml
config/: config.yaml
src/app/: __init__.py  cli.py
