[project]
name = "medialibrary-to-audiobookshelf"
version = "0.1.0"
description = "List and download recent media library episodes as MP3 files using yt-dlp."
requires-python = ">=3.11"
dependencies = [
    "croniter>=6.0.0",
    "mutagen>=1.47.0",
    "PyYAML>=6.0.2",
    "yt-dlp>=2026.3.17",
]

[project.scripts]
medialibrary-to-audiobookshelf = "app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
pythonpath = ["src"]
